Updated with observations on data.

--- a/Pymoli.ipynb
+++ b/Pymoli.ipynb
@@ -118,7 +118,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#len(pymoli)"
+    "print(\"Observations on Pymoli Data\\n\")\n",
+    "print(\"1. The average player spent just under $4. Our “whales” averaged over $13. While bringing in more players is important- a heavier focus should be on increasing spending among existing players.\"\\n)\n",
+    "print(\"2. Older players, 36-43, typically spent the most as individuals, though make up a very small number of players. Focusing on bring in these older players, along with their expendable income, may have greater impact that bringing in younger players who spend less.\"\\n)\n",
+    "print(\"3. 'Final Critic' was the most popular, but also our most expensive item available. Why? Good in game stats? Does it look frickin’ sick? Figure out what’s going on there and do more of it. That item is a gold mine.\")"
    ]
   },
   {
